overflow cube problem fixed

--- a/css/style.css
+++ b/css/style.css
@@ -67,7 +67,8 @@ html {
 body {
   max-width: 1400px;
   margin: 0 auto;
-  text-align: center; }
+  text-align: center;
+  overflow-x: hidden; }
 
 h2 {
   color: #998200;
@@ -485,7 +486,8 @@ nav {
 .bottom {
   background-color: rgba(153, 130, 1, 0.8);
   height: 250px;
-  width: 250px; }
+  width: 250px;
+  backface-visibility: hidden; }
   @media (min-width: 820px) {
     .front,
     .back,
@@ -505,8 +507,7 @@ nav {
     width: 100%; }
 
 .front {
-  transform: translateZ(125px);
-  backface-visibility: hidden; }
+  transform: translateZ(125px); }
   @media (min-width: 820px) {
     .front {
       transform: translateZ(150px); } }
