--- a/scss/base/_elements.scss
+++ b/scss/base/_elements.scss
@@ -12,6 +12,7 @@ body {
     max-width: $body-max-width;
     margin: 0 auto;
     text-align: center;
+    overflow-x: hidden;
 }
 
 h2 {
